# tairos

./: .gitignore  LICENSE  README.md  generate-catalog.cjs  index.html  package-lock.json  package.json  pitch-demo.html  pitch-v2.html  pitch-v3.html  run-dev.bat
SafetySwitch/: main_integration_snippet.c  mavlink_min.c  mavlink_min.h  safety_config.h  safety_post.c  safety_post.h  safety_switch.c  safety_switch.h
apps/api/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260420_0001_initial_schema.py  20260420_0002_agent_tables.py
apps/api/scripts/: seed_nodes_from_frontend.py
apps/api/src/tairos_api/: __init__.py  config.py  db.py  main.py
apps/api/src/tairos_api/agents/: __init__.py  base.py  llm.py  registry.py  runtime.py  tool.py
apps/api/src/tairos_api/agents/examples/: __init__.py  inventory_analyst.py  llm_inventory_analyst.py  news_scanner.py  web_analyst.py
apps/api/src/tairos_api/agents/tools/: __init__.py  _net.py  inventory.py  rss.py  web.py
apps/api/src/tairos_api/mcp/: __init__.py  protocol.py  server.py
apps/api/src/tairos_api/models/: __init__.py  agent.py  node.py
apps/api/src/tairos_api/routers/: __init__.py  agents.py  health.py  nodes.py
apps/api/tests/: conftest.py  test_agents.py  test_health.py  test_llm_agent.py  test_nodes.py  test_rss_tool.py  test_seed_nodes.py  test_web_tool.py
apps/web/: .env.example  package.json  tailwind.config.js
public/: manifest.json
scripts/: assistant-server.mjs  seed-conflict-assets.mjs  seed-forces.mjs  seed-global-sites.mjs
src/: index.css
src/components/: AreaInfoPanel.jsx  ConflictAssetLayer.jsx  ConflictDetailPanel.jsx  ConflictLayer.jsx  CountryFocusLayer.jsx  FloatingPanel.jsx  ForceDeploymentSection.jsx  KillChainLayer.jsx  MapLayersIsland.jsx  MapView.jsx  (+3 more)
(+91 files in other folders)
